@@ -1,5 +1,9 @@
 2007-10-24  Satoshi Nakagawa <artension@gmail.com>
 
+	Changed to allow lossy encoding conversions.
+
+2007-10-24  Satoshi Nakagawa <artension@gmail.com>
+
 	Changed to run GC after 10 minutes idle.
 	Fixed a bug, a scrollback mark in the head of log should be erased when the number of log lines gets greater than threshold.
 
